eslint: Reconfigure `space-before-function-paren`.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -196,7 +196,10 @@
     ],
     "space-before-function-paren": [
       "error",
-      "never"
+      {
+        "named": "never",
+        "asyncArrow": "always"
+      }
     ],
 
     // Deprecated
