eslint: Enable and configure `function-call-argument-newline`.
Also return to the default parser, Espree, and configure ecmaVersion.

I finally updated my dev machine and got a newer (thought not latest)
version of eslint installed (yes, I know, not the *node* way of doing
things).

Issue #69.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,8 @@
     "greasemonkey": true,
     "es6": true
   },
-  "parser": "babel-eslint",
   "parserOptions": {
+    "ecmaVersion": "latest",
     "sourceType": "script"
   },
   "extends": "eslint:all",
@@ -141,6 +141,10 @@
     "dot-location": [
       "error",
       "property"
+    ],
+    "function-call-argument-newline": [
+      "error",
+      "consistent"
     ],
     "indent": [
       "error",
