eslint: Explicitly disable `no-unused-expressions`.
Despite previous comments, even after upgrading my dev system, this
still does not play well with optional chaining.

Issue #68.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -75,7 +75,7 @@
     ],
     "no-ternary": "off",
     "no-underscore-dangle": "off",  // TODO(#68): After Debian upgrade
-    "no-unused-expressions": "off",  // TODO(#68): After Debian upgrade
+    "no-unused-expressions": "off",
     "no-warning-comments": [
       "error",
       {
