--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -74,7 +74,7 @@
       }
     ],
     "no-ternary": "off",
-    "no-underscore-dangle": "off",  // TODO(#68): After Debian upgrade
+    "no-underscore-dangle": "off",  // TODO(#141): Incrementally.
     "no-unused-expressions": "off",
     "no-warning-comments": [
       "error",
