eslint: Reconfigure `max-len` and update tracking issue.
Issue #148.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -149,9 +149,10 @@
         "exceptAfterSingleLine": true
       }
     ],
-    "max-len": [  // TODO(#97): Revisit after
+    "max-len": [  // TODO(#148): WIP
       "off",
       {
+        "code": 78,
         "ignoreUrls": true
       }
     ],
