Track known `Logger` instances.
Due to using an older version of *eslint*, have to also explicitly add
`WeakRef` as a known global.

Issue #145.

␄

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,9 @@
     "greasemonkey": true,
     "es6": true
   },
+  "globals": {
+    "WeakRef": "readonly"
+  },
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "script"
