eslint: Explicitly configure `function-paren-newline`.
Issue #148.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -141,6 +141,10 @@
       "error",
       "consistent"
     ],
+    "function-paren-newline": [
+      "error",
+      "consistent"
+    ],
     "indent": [
       "error",
       2
