eslint: Let `eslint-disable-line` be a long line.
I am not happy with this.  Maybe we can find a better solution.

Issue #148.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -160,6 +160,7 @@
       "off",
       {
         "code": 78,
+        "ignorePattern": "eslint-disable-line",
         "ignoreUrls": true
       }
     ],
