eslint: Reconfigure `no-multiple-empty-lines` along with fix-ups.
␄

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -200,6 +200,14 @@
         "enforceForArrowConditionals": false
       }
     ],
+    "no-multiple-empty-lines": [
+      "error",
+      {
+        "max": 1,
+        "maxBOF": 0,
+        "maxEOF": 0
+      }
+    ],
     "no-multi-spaces": [
       "error",
       {
