Make all *static _unique* functions officially public.
I am not a big fan of this, preferring that they stay private.  However, there
are a couple of issues:

* The older version of `eslint` I am using cannot handle multiple static
  #private methods
* Making them static #private arrow functions would require that they be
  defined *before* the static field that references it, violating the style
  guide.

Just easier to do this for now.

Issues #141, #173.

␄

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -86,10 +86,7 @@
           "_errorPlatformInfo",
           "_errorTab",
           "_parseHeader",
-          "_shortcutsTab",
-          "_uniqueCardsIdentifier",
-          "_uniqueIdentifier",
-          "_uniqueJobIdentifier"
+          "_shortcutsTab"
         ]
       }
     ],
