eslint: Update configuration for `no-underscore-dangle`.
A lot of moving code around has settled and time to get back to this.

Having the exceptions lists acts as a burn down list.

Issue #141.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -80,13 +80,45 @@
     "no-underscore-dangle": [  // TODO(#141): Periodically review.
       "error",
       {
-        "allowAfterThis": true,
         "allow": [
+          "_addInfo",
+          "_addInfoDialog",
+          "_addInfoStyle",
+          "_addInfoViewHandlers",
+          "_cards",
+          "_dull",
           "_errorMarker",
           "_errorPlatformInfo",
           "_errorTab",
+          "_errors",
+          "_findPages",
+          "_info",
+          "_infoId",
+          "_initializeInfoDialog",
+          "_initializeInfoView",
+          "_initializeTabUiKeyboard",
+          "_installNavStyle",
+          "_invites",
+          "_jobCards",
+          "_jobs",
+          "_lastInputElement",
+          "_news",
+          "_nextPost",
+          "_nextTab",
+          "_notifications",
+          "_onFocus",
+          "_pageHeader",
+          "_pageInfoId",
           "_parseHeader",
-          "_shortcutsTab"
+          "_prevPost",
+          "_prevTab",
+          "_sections",
+          "_setKeyboardContext",
+          "_shine",
+          "_shortcutsTab",
+          "_tabUiKeyboard",
+          "_togglePost",
+          "_updateInfoErrorsLabel"
         ]
       }
     ],
