--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -202,6 +202,12 @@
       "error",
       "always-multiline"
     ],
+    "newline-per-chained-call": [
+      "error",
+      {
+        "ignoreChainWithDepth": 1
+      }
+    ],
     "no-extra-parens": [
       "error",
       "all",
