eslint: Rename a local variable that shadows a browser global.
Issue #238.

␄

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,7 @@
     // TODO(#238): Prune this list
     "name": "off",
     "self": "off",
-    "event": "off",
-    "toolbar": "off"
+    "event": "off"
   },
   "parserOptions": {
     "ecmaVersion": "latest",
